# haskell-mpf

./: .gitignore  404.html  CHANGELOG.md  PLAN.md  README.md  cabal.project  flake.nix  haskell-mpf.cabal  haskell-mpfs.cabal  index.html  justfile  merkle-patricia-forestry.cabal  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yaml
PHASE4-DESIGN/: index.html
architecture/data-sources/: index.html
architecture/overview/: index.html
architecture/singletons/: index.html
architecture/testing/: index.html
bench/: mpf-bench-rocksdb.hs  mpf-bench.hs
cardano-mpfs-offchain/: NAVIGATION.md  cardano-mpfs-offchain.cabal
cardano-mpfs-offchain/e2e-test/: main.hs
cardano-mpfs-offchain/e2e-test/Cardano/MPFS/E2E/: BootstrapSpec.hs  CageFlowSpec.hs  CageSpec.hs  ChainSyncSpec.hs  Devnet.hs  IndexerSpec.hs  ProviderSpec.hs  Setup.hs  SubmitterSpec.hs
cardano-mpfs-offchain/e2e-test/genesis/: byron-genesis.json  conway-genesis.json  node-config.json  shelley-genesis.json  topology.json
cardano-mpfs-offchain/e2e-test/genesis/delegate-keys/: delegate1.kes.skey  delegate1.opcert  delegate1.vrf.skey
cardano-mpfs-offchain/exe/: GenBootstrap.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/: Application.hs  Balance.hs  Blueprint.hs  Bootstrap.hs  Context.hs  Indexer.hs  OnChain.hs  Proof.hs  Provider.hs  State.hs  Submitter.hs  Trie.hs  TxBuilder.hs  Types.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/Core/: Balance.hs  Blueprint.hs  Bootstrap.hs  OnChain.hs  Proof.hs  Types.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/Core/Bootstrap/: Genesis.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/Indexer/: CageEvent.hs  CageFollower.hs  Codecs.hs  Columns.hs  Event.hs  Follower.hs  Persistent.hs  Rollback.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/Mock/: Context.hs  Indexer.hs  Provider.hs  Skeleton.hs  State.hs  Submitter.hs  TxBuilder.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/NodeClient/: Codecs.hs  Connection.hs  LocalStateQuery.hs  LocalTxSubmission.hs  Types.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/Provider/: NodeClient.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/Submitter/: N2C.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/Trie/: Persistent.hs  Pure.hs  PureManager.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/TxBuilder/: Config.hs  Real.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/TxBuilder/Real/: Boot.hs  End.hs  Internal.hs  Request.hs  Retract.hs  Update.hs
cardano-mpfs-offchain/test/: main.hs
cardano-mpfs-offchain/test/Cardano/MPFS/: BalanceSpec.hs  BootstrapSpec.hs  Generators.hs  OnChainSpec.hs  ProofSpec.hs  StateSpec.hs  TrieManagerSpec.hs  TrieSpec.hs  TxBuilderSpec.hs
cardano-mpfs-offchain/test/Cardano/MPFS/Indexer/: CageEventSpec.hs  CageFollowerSpec.hs  CodecsSpec.hs  EventSpec.hs  FollowerSpec.hs  InverseSpec.hs  PersistentSpec.hs  RollbackSpec.hs
cardano-mpfs-offchain/test/Cardano/MPFS/Trie/: PersistentSpec.hs
docs/: PHASE4-DESIGN.md  index.md
docs/architecture/: data-sources.md  database.md  overview.md  singletons.md  testing.md
lean/: Phase4.lean  lake-manifest.json  lakefile.lean
lean/.lake/config/[anonymous]/: lakefile.olean  lakefile.olean.trace
lean/Phase4/: Codecs.lean  Domain.lean  Properties.lean  Speculation.lean  Theorems.lean
lib/MPF/: Deletion.hs  Hashes.hs  Insertion.hs  Interface.hs
lib/MPF/Backend/: Pure.hs  RocksDB.hs
lib/MPF/Proof/: Insertion.hs
nix/: haddock.nix  project.nix
search/: search_index.json
test-lib/MPF/Test/: Lib.hs
test/Data/Serialize/: ExtraSpec.hs
test/MPF/: DeletionSpec.hs  HashesSpec.hs  InsertionSpec.hs  InterfaceSpec.hs  PropertySpec.hs
test/MPF/Backend/: PureSpec.hs
test/MPF/Proof/: InsertionSpec.hs
