cabal-version:   3.4
name:            merkle-patricia-forestry
version:         0.1.0.0
synopsis:        Merkle Patricia Forestry implementation in Haskell
description:
  A Haskell library implementing Merkle Patricia Forestry (MPF),
  a 16-ary hex-based Patricia trie with Blake2b-256 hashing.
  Provides insertion, deletion, and cryptographic inclusion proofs
  compatible with the Aiken on-chain implementation.

license:         Apache-2.0
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
homepage:        https://github.com/paolino/cardano-mpfs-offchain
bug-reports:     https://github.com/paolino/cardano-mpfs-offchain/issues
category:        Cryptography, Data
stability:       experimental
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wmissing-export-lists
    -Wname-shadowing -Wdeferred-out-of-scope-variables
    -Wpartial-type-signatures -Wredundant-constraints

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           warnings
  exposed-modules:
    Data.Serialize.Extra
    MPF
    MPF.Backend.Pure
    MPF.Backend.RocksDB
    MPF.Backend.Standalone
    MPF.Deletion
    MPF.Hashes
    MPF.Insertion
    MPF.Interface
    MPF.Proof.Insertion

  build-depends:
    , async                                    >=2.2  && <2.3
    , base                                     >=4.19 && <5
    , bytestring                               >=0.12 && <0.13
    , cereal                                   >=0.5  && <0.6
    , containers                               >=0.6  && <0.7
    , crypton                                  >=1.0  && <1.1
    , exceptions                               >=0.10 && <0.11
    , lens                                     >=5.3  && <5.4
    , memory                                   >=0.18 && <0.19
    , rocksdb-haskell-jprupp                   >=2.1  && <2.2
    , rocksdb-kv-transactions                  >=0.1  && <0.2
    , rocksdb-kv-transactions:kv-transactions
    , transformers                             >=0.6  && <0.7
    , unliftio                                 >=0.2  && <0.3

  hs-source-dirs:   lib
  default-language: Haskell2010

library mpf-test-lib
  import:           warnings
  visibility:       public
  exposed-modules:  MPF.Test.Lib
  build-depends:
    , base
    , bytestring
    , lens
    , merkle-patricia-forestry
    , rocksdb-kv-transactions:kv-transactions
    , text                                     >=2.0 && <2.2

  hs-source-dirs:   test-lib
  default-language: Haskell2010

test-suite unit-tests
  import:             warnings
  default-language:   Haskell2010
  hs-source-dirs:     test
  build-depends:
    , base
    , bytestring
    , cereal
    , containers
    , hspec                                  >=2.11 && <2.12
    , merkle-patricia-forestry
    , merkle-patricia-forestry:mpf-test-lib
    , QuickCheck                             >=2.14 && <2.18

  build-tool-depends: hspec-discover:hspec-discover >=2.11 && <2.12
  type:               exitcode-stdio-1.0
  main-is:            main.hs
  other-modules:
    Data.Serialize.ExtraSpec
    MPF.Backend.PureSpec
    MPF.DeletionSpec
    MPF.HashesSpec
    MPF.InsertionSpec
    MPF.InterfaceSpec
    MPF.Proof.InsertionSpec
    MPF.PropertySpec

executable mpf-bench
  import:           warnings
  ghc-options:      -O2
  default-language: Haskell2010
  hs-source-dirs:   bench
  main-is:          mpf-bench.hs
  build-depends:
    , base
    , bytestring
    , merkle-patricia-forestry
    , merkle-patricia-forestry:mpf-test-lib
    , time                                   >=1.12 && <1.14

executable mpf-bench-rocksdb
  import:           warnings
  ghc-options:      -O2 -rtsopts
  default-language: Haskell2010
  hs-source-dirs:   bench
  main-is:          mpf-bench-rocksdb.hs
  build-depends:
    , base
    , bytestring
    , directory                                >=1.3  && <1.4
    , lens
    , merkle-patricia-forestry
    , rocksdb-kv-transactions:kv-transactions
    , time                                     >=1.12 && <1.14
