cabal-version: 3.4
name:          cardano-mpfs-offchain
version:       0.0.0
synopsis:      Offchain service interfaces for Cardano MPFS
description:
  Record-of-functions interfaces for the Cardano Merkle
  Patricia Forestry offchain service. Uses real
  cardano-ledger types for all Cardano primitives.
  Includes mock implementations for testing.

license:       Apache-2.0
license-file:  LICENSE
author:        Paolo Veronelli
maintainer:    paolo.veronelli@gmail.com
category:      Cardano
build-type:    Simple

common warnings
  ghc-options:        -Wall
  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    RecordWildCards
    StrictData

library
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   lib
  build-depends:
    , aeson                                  >=2.1  && <2.3
    , async
    , base                                   >=4.18 && <5
    , bytestring                             >=0.11 && <0.13
    , cardano-crypto-class
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-strict-containers
    , containers                             >=0.6  && <0.8
    , contra-tracer
    , crypton
    , memory
    , merkle-patricia-forestry
    , merkle-patricia-forestry:mpf-test-lib
    , microlens
    , network-mux
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-consensus-protocol
    , ouroboros-network
    , ouroboros-network-api
    , ouroboros-network-framework
    , ouroboros-network-protocols
    , plutus-core
    , plutus-tx
    , serialise
    , stm
    , text                                   >=2.0  && <2.2
    , typed-protocols

  exposed-modules:
    Cardano.MPFS.Balance
    Cardano.MPFS.Blueprint
    Cardano.MPFS.Context
    Cardano.MPFS.Indexer
    Cardano.MPFS.Mock.Context
    Cardano.MPFS.Mock.Indexer
    Cardano.MPFS.Mock.Provider
    Cardano.MPFS.Mock.State
    Cardano.MPFS.Mock.Submitter
    Cardano.MPFS.Mock.TxBuilder
    Cardano.MPFS.NodeClient.Codecs
    Cardano.MPFS.NodeClient.Connection
    Cardano.MPFS.NodeClient.LocalStateQuery
    Cardano.MPFS.NodeClient.LocalTxSubmission
    Cardano.MPFS.NodeClient.Types
    Cardano.MPFS.OnChain
    Cardano.MPFS.Proof
    Cardano.MPFS.Provider
    Cardano.MPFS.Provider.NodeClient
    Cardano.MPFS.State
    Cardano.MPFS.Submitter
    Cardano.MPFS.Submitter.N2C
    Cardano.MPFS.Trie
    Cardano.MPFS.Trie.Pure
    Cardano.MPFS.Trie.PureManager
    Cardano.MPFS.TxBuilder
    Cardano.MPFS.Types

test-suite unit-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          main.hs
  build-depends:
    , base
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-api
    , cardano-ledger-core
    , cardano-mpfs-offchain
    , containers
    , hspec                                  >=2.11 && <2.12
    , merkle-patricia-forestry
    , merkle-patricia-forestry:mpf-test-lib
    , microlens
    , plutus-core
    , plutus-tx
    , QuickCheck                             >=2.14 && <2.18
    , text

  other-modules:
    Cardano.MPFS.BalanceSpec
    Cardano.MPFS.Generators
    Cardano.MPFS.OnChainSpec
    Cardano.MPFS.ProofSpec
    Cardano.MPFS.StateSpec
    Cardano.MPFS.TrieManagerSpec
    Cardano.MPFS.TrieSpec
