cabal-version: 3.4
name:          cardano-mpfs-offchain
version:       0.0.0
synopsis:      Offchain service interfaces for Cardano MPFS
description:
  Record-of-functions interfaces for the Cardano Merkle
  Patricia Forestry offchain service. Uses real
  cardano-ledger types for all Cardano primitives.
  Includes mock implementations for testing.

license:       Apache-2.0
license-file:  LICENSE
author:        Paolo Veronelli
maintainer:    paolo.veronelli@gmail.com
category:      Cardano
build-type:    Simple

common warnings
  ghc-options:        -Wall
  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    RecordWildCards
    StrictData

library
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   lib
  build-depends:
    , aeson                                    >=2.1  && <2.3
    , async
    , base                                     >=4.18 && <5
    , bytestring                               >=0.11 && <0.13
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-strict-containers
    , cardano-utxo-csmt:library
    , cborg
    , containers                               >=0.6  && <0.8
    , contra-tracer
    , crypton
    , lens
    , memory
    , merkle-patricia-forestry
    , merkle-patricia-forestry:mpf-test-lib
    , microlens
    , network-mux
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-consensus-protocol
    , ouroboros-network
    , ouroboros-network-api
    , ouroboros-network-framework
    , ouroboros-network-protocols
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , rocksdb-haskell-jprupp
    , rocksdb-kv-transactions
    , rocksdb-kv-transactions:kv-transactions
    , serialise
    , stm
    , text                                     >=2.0  && <2.2
    , time
    , typed-protocols

  exposed-modules:
    Cardano.MPFS.Application
    Cardano.MPFS.Balance
    Cardano.MPFS.Blueprint
    Cardano.MPFS.Bootstrap
    Cardano.MPFS.Context
    Cardano.MPFS.Indexer
    Cardano.MPFS.Indexer.CageEvent
    Cardano.MPFS.Indexer.CageFollower
    Cardano.MPFS.Indexer.Codecs
    Cardano.MPFS.Indexer.Columns
    Cardano.MPFS.Indexer.Persistent
    Cardano.MPFS.Indexer.Rollback
    Cardano.MPFS.Indexer.Skeleton
    Cardano.MPFS.Mock.Context
    Cardano.MPFS.Mock.Indexer
    Cardano.MPFS.Mock.Provider
    Cardano.MPFS.Mock.State
    Cardano.MPFS.Mock.Submitter
    Cardano.MPFS.Mock.TxBuilder
    Cardano.MPFS.NodeClient.Codecs
    Cardano.MPFS.NodeClient.Connection
    Cardano.MPFS.NodeClient.LocalStateQuery
    Cardano.MPFS.NodeClient.LocalTxSubmission
    Cardano.MPFS.NodeClient.Types
    Cardano.MPFS.OnChain
    Cardano.MPFS.Proof
    Cardano.MPFS.Provider
    Cardano.MPFS.Provider.NodeClient
    Cardano.MPFS.State
    Cardano.MPFS.Submitter
    Cardano.MPFS.Submitter.N2C
    Cardano.MPFS.Trie
    Cardano.MPFS.Trie.Persistent
    Cardano.MPFS.Trie.Pure
    Cardano.MPFS.Trie.PureManager
    Cardano.MPFS.TxBuilder
    Cardano.MPFS.TxBuilder.Config
    Cardano.MPFS.TxBuilder.Real
    Cardano.MPFS.TxBuilder.Real.Boot
    Cardano.MPFS.TxBuilder.Real.End
    Cardano.MPFS.TxBuilder.Real.Internal
    Cardano.MPFS.TxBuilder.Real.Request
    Cardano.MPFS.TxBuilder.Real.Retract
    Cardano.MPFS.TxBuilder.Real.Update
    Cardano.MPFS.Types

executable mpfs-bootstrap-genesis
  import:           warnings
  default-language: GHC2021
  hs-source-dirs:   exe
  main-is:          GenBootstrap.hs
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-data
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-mpfs-offchain
    , optparse-applicative

  ghc-options:      -threaded

test-suite unit-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          main.hs
  build-depends:
    , base
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-api
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-mpfs-offchain
    , containers
    , hspec                                    >=2.11 && <2.12
    , lens
    , merkle-patricia-forestry
    , merkle-patricia-forestry:mpf-test-lib
    , microlens
    , plutus-core
    , plutus-tx
    , QuickCheck                               >=2.14 && <2.18
    , rocksdb-haskell-jprupp
    , rocksdb-kv-transactions
    , rocksdb-kv-transactions:kv-transactions
    , temporary
    , text

  other-modules:
    Cardano.MPFS.BalanceSpec
    Cardano.MPFS.BootstrapSpec
    Cardano.MPFS.Generators
    Cardano.MPFS.Indexer.CageEventSpec
    Cardano.MPFS.Indexer.CageFollowerSpec
    Cardano.MPFS.Indexer.CodecsSpec
    Cardano.MPFS.Indexer.InverseSpec
    Cardano.MPFS.Indexer.PersistentSpec
    Cardano.MPFS.Indexer.RollbackSpec
    Cardano.MPFS.OnChainSpec
    Cardano.MPFS.ProofSpec
    Cardano.MPFS.StateSpec
    Cardano.MPFS.Trie.PersistentSpec
    Cardano.MPFS.TrieManagerSpec
    Cardano.MPFS.TrieSpec
    Cardano.MPFS.TxBuilderSpec

test-suite e2e-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  default-language: GHC2021
  hs-source-dirs:   e2e-test
  main-is:          main.hs
  build-depends:
    , async
    , base
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-mpfs-offchain
    , containers
    , directory
    , filepath
    , hspec                   >=2.11 && <2.12
    , microlens
    , ouroboros-network-api
    , process
    , temporary
    , text
    , time
    , unix

  other-modules:
    Cardano.MPFS.E2E.BootstrapSpec
    Cardano.MPFS.E2E.CageSpec
    Cardano.MPFS.E2E.Devnet
    Cardano.MPFS.E2E.IndexerSpec
    Cardano.MPFS.E2E.ProviderSpec
    Cardano.MPFS.E2E.Setup
    Cardano.MPFS.E2E.SubmitterSpec
